--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack src/index.js --output bin/app.js -d --watch"
+    "start": "webpack src/index.js --output bin/app.js -d --watch",
+    "dev": "../.npm-prefix/bin/parcel watch src/*",
+    "build": "../.npm-prefix/bin/parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
     "mithril": "^2.0.4"
   },
   "devDependencies": {
