added blueimp video player component!

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^3.7.2",
+    "blueimp-gallery": "^2.35.0",
     "classnames": "^2.2.6",
     "mithril": "^2.0.4",
     "plyr": "^3.5.6"
